[package]
name = "async_demo"
version = "0.1.0"
authors = ["huangjiahua <jh@jiahuah.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6.19"
slab = "0.4.2"
failure = "0.1.5"
log = "0.4.0"
env_logger = "0.6.2"
